--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5",
-    "vuetify": "^3.7.1"
+    "vuetify": "^3.7.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -37,7 +38,9 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
+      "no-empty":"off",
       "no-unused-vars": "off",
+      "vue/multi-word-component-names": "off",
       "eslint-plugin-vue/multi-word-component-names": "off"
     }
   },
